[gd_scene load_steps=7 format=3 uid="uid://k1t38hd8do6s"]

[ext_resource type="Script" uid="uid://b1va06vy7jbij" path="res://Scripts/EthnicityDetectionController.gd" id="1_controller"]
[ext_resource type="Script" uid="uid://6314y42fv2qw" path="res://Scripts/WebcamClient.gd" id="3_0m2xk"]
[ext_resource type="Texture2D" uid="uid://wou5n6pdg1xt" path="res://Assets/accessories/dasi.png" id="3_o41lu"]
[ext_resource type="Texture2D" uid="uid://c3h1mvgyswiiw" path="res://Assets/accessories/choker.png" id="4_q7dil"]
[ext_resource type="Texture2D" uid="uid://qkq24pcwc1xs" path="res://Assets/accessories/kalung.png" id="5_2y3ji"]
[ext_resource type="Script" uid="uid://bvt5sbgve0ac3" path="res://Scripts/WebcamVideoClient.gd" id="5_y16ji"]

[node name="EthnicityDetection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_controller")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.156863, 0.235294, 1)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="MainContainer"]
layout_mode = 2
text = "Deteksi Etnis Indonesia"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtitleLabel" type="Label" parent="MainContainer"]
layout_mode = 2
text = "Posisikan wajah Anda di depan kamera"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CameraContainer" type="Control" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="WebcamContainer" type="Panel" parent="MainContainer/CameraContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -240.0
offset_right = 320.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2

[node name="WebcamFeed" type="TextureRect" parent="MainContainer/CameraContainer/WebcamContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="CameraStatusLabel" type="Label" parent="MainContainer/CameraContainer/WebcamContainer/WebcamFeed"]
modulate = Color(1, 1, 1, 0.9)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Menginisialisasi kamera..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="DetectionOverlay" type="Control" parent="MainContainer/CameraContainer/WebcamContainer/WebcamFeed"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FaceFrame" type="ReferenceRect" parent="MainContainer/CameraContainer/WebcamContainer/WebcamFeed/DetectionOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -80.0
offset_right = 80.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
border_color = Color(0, 1, 0, 0)
border_width = 3.0

[node name="StatusContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="StatusLabel" type="Label" parent="MainContainer/StatusContainer"]
layout_mode = 2
text = "Mencari wajah..."
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="MainContainer/StatusContainer"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2

[node name="ResultContainer" type="VBoxContainer" parent="MainContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4

[node name="EthnicityLabel" type="Label" parent="MainContainer/ResultContainer"]
layout_mode = 2
text = "Etnis Terdeteksi: Jawa"
horizontal_alignment = 1

[node name="DescriptionLabel" type="RichTextLabel" parent="MainContainer/ResultContainer"]
custom_minimum_size = Vector2(600, 150)
layout_mode = 2
text = "[b]Etnis Jawa[/b]
Suku Jawa adalah kelompok etnik terbesar di Indonesia yang berasal dari Jawa Tengah dan Jawa Timur. Dikenal dengan budaya yang kaya, termasuk batik, wayang, dan gamelan."
fit_content = true

[node name="RedirectLabel" type="Label" parent="MainContainer/ResultContainer"]
layout_mode = 2
text = "Mengarahkan ke region budaya yang sesuai..."
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="StartDetectionButton" type="Button" parent="MainContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Mulai Deteksi"

[node name="BackButton" type="Button" parent="MainContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Kembali"

[node name="LoadingOverlay" type="Control" parent="MainContainer"]
visible = false
layout_mode = 2

[node name="LoadingBackground" type="ColorRect" parent="MainContainer/LoadingOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="LoadingContainer" type="VBoxContainer" parent="MainContainer/LoadingOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -75.0
offset_right = 150.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoadingSpinner" type="TextureRect" parent="MainContainer/LoadingOverlay/LoadingContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
expand_mode = 1
stretch_mode = 5

[node name="LoadingLabel" type="Label" parent="MainContainer/LoadingOverlay/LoadingContainer"]
layout_mode = 2
text = "Memuat pengalaman budaya..."
horizontal_alignment = 1

[node name="AccessoryLayer" type="Node2D" parent="MainContainer"]
position = Vector2(-50, -50)

[node name="TieSprite" type="Sprite2D" parent="MainContainer/AccessoryLayer"]
position = Vector2(196, 589)
texture = ExtResource("3_o41lu")

[node name="ChokerSprite" type="Sprite2D" parent="MainContainer/AccessoryLayer"]
texture = ExtResource("4_q7dil")

[node name="NecklaceSprite" type="Sprite2D" parent="MainContainer/AccessoryLayer"]
texture = ExtResource("5_2y3ji")

[node name="HUD" type="Control" parent="MainContainer"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="MainContainer/HUD"]
layout_mode = 0
offset_right = 32.0
offset_bottom = 20.0

[node name="CheckBox" type="CheckBox" parent="MainContainer/HUD"]
layout_mode = 0
offset_right = 24.0
offset_bottom = 24.0

[node name="Label" type="Label" parent="MainContainer/HUD"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="UDPClient" type="Node" parent="." groups=["udp_client"]]
script = ExtResource("3_0m2xk")

[node name="UDPVideoClient" type="Node" parent="."]
script = ExtResource("5_y16ji")

[connection signal="pressed" from="MainContainer/ButtonContainer/StartDetectionButton" to="." method="_on_start_detection_pressed"]
[connection signal="pressed" from="MainContainer/ButtonContainer/BackButton" to="." method="_on_back_pressed"]
